Prod V2/main/default/objects/Package__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>OR(
AND (
TODAY() &lt;=  Date_To__c ,
TODAY() &gt;=  Date_From__c ),
ISBLANK(Date_To__c),
ISBLANK(Date_From__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>