Prod V2/main/default/objects/Package__c/fields/Allowed_Pricelist_Ids__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Pricelist_Ids__c</fullName>
    <label>Allowed Pricelist Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>