Prod V2/main/default/objects/Package__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>Integration Field - comes from Odoo</description>
    <label>Date From</label>
    <type>Date</type>
</CustomField>