Prod V2/main/default/objects/Package__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>Integration Field - comes from Odoo</description>
    <label>Date To</label>
    <type>Date</type>
</CustomField>