Prod V2/main/default/objects/Package__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <description>Integration Field - comes from Odoo</description>
    <label>Package Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>