Prod V2/main/default/objects/Package__c/fields/Starter__c.field-meta.xml
<CustomField>
    <fullName>Starter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True if package is starter</description>
    <label>Starter</label>
    <type>Checkbox</type>
</CustomField>