Prod V2/main/default/objects/Package__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True if package is yearly</description>
    <label>Year</label>
    <type>Checkbox</type>
</CustomField>