Prod V2/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allowed_Pricelist_Ids__c</columns>
    <columns>Starter__c</columns>
    <columns>Year__c</columns>
    <columns>Active__c</columns>
    <columns>Date_From__c</columns>
    <columns>Date_To__c</columns>
    <columns>Brand__c</columns>
    <columns>Odoo_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>